src/main/java/semantic/abstractSintaxTree/test/failing/mismatchParametersInConstructor.ru
/? ParameterCountMismatchException
struct A {
    Int num;
}

impl A {
    .(Int a) {
    }
}

start {
    A a;

    a = new A();
}